--- a/pympa_affarigenerali/templates/affarigenerali/riepilogo_presenze.html
+++ b/pympa_affarigenerali/templates/affarigenerali/riepilogo_presenze.html
@@ -19,6 +19,17 @@
     </script>
 {% endblock %}
 
+<!-- BREADCRUMBS -->
+{% block breadcrumbs %}
+    <ul>
+        <li><a href="{% url 'admin:index' %}">{% trans "Home" %}</a></li>
+        <li><a href="{% url 'admin:app_list' app_label=opts.app_label %}">{{ opts.app_config.verbose_name }}</a></li>
+        <li><a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a></li>
+        <li>{{ title }}</li>
+{#            <li>{% if has_change_permission %}<a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a>{% else %}{{ opts.verbose_name_plural|capfirst }}{% endif %}</li>#}
+    </ul>
+{% endblock %}
+
 {% block content %}
 <div id="content-main">
     <div id="div_form_filter">
